--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Alumni Website</title>
   </head>
   <body>
+    <h1>This is the template for Alumni Website</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
